# smart_door_lock

./: .gitignore  README.md
application/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
application/configuration/nrf52840dk_nrf52840/: buttons_def.h
application/src/: dis_svc.c  gap_advertising.c  gap_advertising.h  keypad.c  lock_svc.c  lock_svc.h  main.c
docs/nRF52840 Development Kit - Hardware files 3_0_3/: License.txt
docs/nRF52840 Development Kit - Hardware files 3_0_3/PCA10056-nRF52840 Development Board 3_0_3/Altium Designer files/: pca10056.PrjPCB  pca10056_sheet1_cover.SchDoc  pca10056_sheet2_nrf52840_mcu.Harness  pca10056_sheet2_nrf52840_mcu.SchDoc  pca10056_sheet3_interface_mcu.SchDoc  pca10056_sheet4_misc.Harness  pca10056_sheet4_misc.SchDoc  pca10056_sheet5_connectors.SchDoc  pca10056_sheet6_power_supply.SchDoc
docs/nRF52840 Development Kit - Hardware files 3_0_3/PCA10056-nRF52840 Development Board 3_0_3/Production files/BOM/: PCA10056_BOM_Web.xls
docs/nRF52840 Development Kit - Hardware files 3_0_3/PCA10056-nRF52840 Development Board 3_0_3/Production files/DRILL/: 400236-RoundHoles.TX1  400236-RoundHoles.TXT  400236-SlotHoles.TXT  400236.DR1  400236.DRL  400236.DRR
docs/requirements/: requirements.xlsx
gateway/: partitions.csv  sdkconfig  sdkconfig.old
gateway/main/: CMakeLists.txt  blecent.h  main.c  wifi.c  wifi.h
smart_lock/: CMakeLists.txt
smart_lock/src/: gap_connection.c  gap_connection.h  gatt_dis_svc.c  gatt_lock_svc.c  gatt_lock_svc.h  keypad.c  main.c  security.c  security.h
(+16 files in other folders)
